--- a/src/App.css
+++ b/src/App.css
@@ -63,4 +63,73 @@
 }
 span.input-group-text {
   background: transparent;
+  border: none;
+  background: transparent;
+  border-bottom: solid 1px #fff;
+  border-radius: 0;
+
+}
+input.form-control {
+  border: none;
+  background: transparent;
+  border-bottom: solid 1px #fff;
+  border-radius: 0;
+  color: #ffffff;
+  padding: 0;
+}
+input.form-control:hover,input.form-control:focus,input.form-control:visited{
+  background: transparent !important;
+  color: #ffffff;
+ box-shadow: none;
+}
+input.form-control::placeholder{
+  color: #ffffff34;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 27.28px;
+  text-align: left;
+  
+}
+button.btn-style {
+  background: #fff;
+  border: none;
+  color: #000;
+  font-family: Nunito Sans;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 27.28px;
+  text-align: left;
+  padding: 10px 130px;
+}
+
+button.btn-style-two.btn {
+  background: #2D2D45;
+  border: 0.58px solid #4D4D4D;
+  padding: 10px 18px;
+  display: flex;
+  align-items: center;
+  gap: 9px;
+  font-family: Nunito Sans;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 14px;
+  text-align: left;
+}
+.box-w {
+  width: 340px;
+}
+.g-20{
+  gap: 20px;
+}
+@media(min-width:767px){
+  .d-flex.align-items-center {
+    position: absolute;
+    top: 40px;
+}
+}
+@media(max-width:500px){
+  .bonus-img{
+    width: 100% !important;
+    height: auto !important;
+  }
 }
