--- a/src/App.css
+++ b/src/App.css
@@ -239,6 +239,17 @@ small{
     margin-right: 0px;
     text-align: left !important;
   }
+  .last {
+    position: relative;
+    bottom: 0px;
+    margin-top: 20px;
+}
+.ali-self{
+  align-self: flex-start !important;
+}
+img.bonus-img {
+  margin-top: 40%;
+}
 }
 
 @media (max-width:768px) {
@@ -270,9 +281,15 @@ input.form-control::placeholder {
   font-size: 20.93px;
   line-height: 34.19px;
 }
+img.bonus-img {
+  margin-top: 20%;
+}
 }
 
 @media (max-width: 500px) {
+  img.bonus-img {
+    margin-top: 0px;
+  }
   .bonus-img {
     margin: auto;
     width: 100% !important;
